PR# kern/30398: panic in ohci_softintr

If the host controller has a TD that the driver doesn't know about, ignore it
instead of calling panic. Patch from Karl Janmar.